--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
 			src="../app/js/bulma-quickview.min.js"
 		></script> -->
 
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
+		
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
