--- a/1/app/index.html
+++ b/1/app/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Bulma入門 javascript React" />
+		<meta name="description" content="Bulma・React入門 javascript " />
 		<title>Bulma Project</title>
 
     <base href="/" />
